--- a/TC4_OLED/platformio.ini
+++ b/TC4_OLED/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
-platform = espressif8266
-board = d1_mini
+platform = lgt8f
+board = lgt8f328p-LQFP48
 framework = arduino
 lib_deps = 
 	mannypeterson/HeliOS@^0.3.3
