--- a/ESP32-TC4/platformio.ini
+++ b/ESP32-TC4/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32_OLED
+default_envs = nodemcu-32s
 
 [env:nodemcu-32s]
 platform = espressif32
@@ -17,7 +17,7 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
 board_build.partitions = partitions_custom.csv
-upload_port = /dev/cu.wchusbserial14310
+upload_port = /dev/cu.wchusbserial1420
 upload_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.33.9
