--- a/ESP32-TC4/platformio.ini
+++ b/ESP32-TC4/platformio.ini
@@ -30,7 +30,7 @@ platform = espressif32
 board = wemosbat
 framework = arduino
 board_build.partitions = partitions_custom.csv
-upload_port = /dev/cu.wchusbserial14310
+upload_port = COM23
 upload_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.33.9
