--- a/ESP32-TC4/platformio.ini
+++ b/ESP32-TC4/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = nodemcu-32s
+default_envs = nodemcu-32s_mac
 
 [env:nodemcu-32s]
 platform = espressif32
@@ -25,15 +25,16 @@ lib_deps =
 	links2004/WebSockets@^2.3.7
 	adafruit/MAX6675 library@^1.1.0
 
-[env:esp32_OLED]
+[env:nodemcu-32s_mac]
 platform = espressif32
-board = wemosbat
+board = nodemcu-32s
 framework = arduino
 board_build.partitions = partitions_custom.csv
-upload_port = COM23
+upload_port = /dev/cu.wchusbserial14310
 upload_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.33.9
 	bblanchon/ArduinoJson@^6.19.4
 	links2004/WebSockets@^2.3.7
 	adafruit/MAX6675 library@^1.1.0
+
