--- a/ESP32-TC4/platformio.ini
+++ b/ESP32-TC4/platformio.ini
@@ -16,24 +16,24 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-board_build.partitions = partitions_custom.csv
-upload_port = /dev/cu.wchusbserial1420
+upload_port = COM25
 upload_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.33.9
 	bblanchon/ArduinoJson@^6.19.4
 	links2004/WebSockets@^2.3.7
 	adafruit/MAX6675 library@^1.1.0
+	adafruit/Adafruit SSD1306@^2.5.7
 
 [env:esp32_OLED]
 platform = espressif32
 board = wemosbat
 framework = arduino
-board_build.partitions = partitions_custom.csv
-upload_port = COM23
+upload_port = COM25
 upload_speed = 115200
 lib_deps = 
 	olikraus/U8g2@^2.33.9
 	bblanchon/ArduinoJson@^6.19.4
 	links2004/WebSockets@^2.3.7
 	adafruit/MAX6675 library@^1.1.0
+	adafruit/Adafruit SSD1306@^2.5.7
