--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,4 @@ lib_deps =
 	links2004/WebSockets@^2.3.7
 	adafruit/MAX6675 library@^1.1.0
 	adafruit/Adafruit SSD1306@^2.5.7
+	danilopinotti/Battery_18650_Stats@^1.0.0
