--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-upload_port = /dev/cu.wchusbserial14310
+upload_port = /dev/ttyUSB0
 board_build.partitions = partitions_custom.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
