--- a/platformio.ini
+++ b/platformio.ini
@@ -24,3 +24,18 @@ lib_deps =
 	adafruit/MAX6675 library@^1.1.0
 	adafruit/Adafruit SSD1306@^2.5.7
 	danilopinotti/Battery_18650_Stats@^1.0.0
+
+
+[env:nodemcu-32_mac]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+monitor_speed = 115200
+upload_port = /dev/ttyUSB0
+board_build.partitions = partitions_custom.csv
+lib_deps = 
+	bblanchon/ArduinoJson@^6.19.4
+	links2004/WebSockets@^2.3.7
+	adafruit/MAX6675 library@^1.1.0
+	adafruit/Adafruit SSD1306@^2.5.7
+	danilopinotti/Battery_18650_Stats@^1.0.0
