--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,9 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.7
 	danilopinotti/Battery_18650_Stats@^1.0.0
 	links2004/WebSockets@^2.3.7
+    ESP Async 
+    WebServer
+    ayushsharma82/AsyncElegantOTA @ ^2.2.5
 
 [env:nodemcu-32_mac]
 platform = espressif32
@@ -38,3 +41,6 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.7
 	danilopinotti/Battery_18650_Stats@^1.0.0
 	links2004/WebSockets@^2.3.7
+    ESP Async 
+    WebServer
+    ayushsharma82/AsyncElegantOTA @ ^2.2.5
