--- a/platformio.ini
+++ b/platformio.ini
@@ -9,13 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = nodemcu-32_mac
+default_envs = nodemcu-32s
 
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 57600
 upload_port = /dev/ttyUSB0
 board_build.partitions = partitions_custom.csv
 lib_deps = 
@@ -26,12 +26,13 @@ lib_deps =
 	links2004/WebSockets@^2.3.7
 	ayushsharma82/AsyncElegantOTA @ ^2.2.5
 	ESP Async WebServer
+monitor_port = /dev/ttyUSB0
 
 [env:nodemcu-32_mac]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 57600
 upload_port = /dev/cu.wchusbserial14310
 board_build.partitions = partitions_custom.csv
 lib_deps = 
@@ -41,4 +42,5 @@ lib_deps =
 	danilopinotti/Battery_18650_Stats@^1.0.0
 	links2004/WebSockets@^2.3.7
 	ayushsharma82/AsyncElegantOTA @ ^2.2.5
-    ESP Async WebServer
+	ESP Async WebServer
+monitor_port = /dev/cu.wchusbserial14310
