--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,8 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 57600
 upload_port = /dev/ttyUSB0
-board_build.partitions = partitions_custom.csv
+board_build.partitions = min_spiffs.csv
+;board_build.partitions = partitions_custom.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	adafruit/MAX6675 library@^1.1.0
@@ -34,7 +35,8 @@ board = nodemcu-32s
 framework = arduino
 monitor_speed = 57600
 upload_port = /dev/cu.wchusbserial14310
-board_build.partitions = partitions_custom.csv
+board_build.partitions = min_spiffs.csv
+;board_build.partitions = partitions_custom.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	adafruit/MAX6675 library@^1.1.0
