--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "system_error": "cpp"
     },
     "editor.fontFamily": "'Nimbus Sans', 'Nimbus Sans', Nimbus Sans",
-    "editor.fontSize": 16
+    "editor.fontSize": 16,
+    "workbench.fontAliasing": "auto"
 }
