--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	adafruit/MAX6675 library@^1.1.0
 	adafruit/Adafruit SSD1306@^2.5.7
-	danilopinotti/Battery_18650_Stats@^1.0.0
+	;danilopinotti/Battery_18650_Stats@^1.0.0
 	links2004/WebSockets@^2.3.7
 	ayushsharma82/AsyncElegantOTA @ ^2.2.7
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
@@ -41,7 +41,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	adafruit/MAX6675 library@^1.1.0
 	adafruit/Adafruit SSD1306@^2.5.7
-	danilopinotti/Battery_18650_Stats@^1.0.0
+	;danilopinotti/Battery_18650_Stats@^1.0.0
 	links2004/WebSockets@^2.3.7
 	ayushsharma82/AsyncElegantOTA @ ^2.2.7
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
