--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 default_envs = nodemcu-32s
 
 [env:nodemcu-32s]
-platform = espressif32 
+platform = espressif32 @5.0.0
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
@@ -20,10 +20,10 @@ upload_port = /dev/ttyUSB0
 board_build.partitions = min_spiffs.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.1
-	links2004/WebSockets@ 2.3.7
-	ayushsharma82/AsyncElegantOTA @  2.2.7
-	ottowinter/ESPAsyncWebServer-esphome@ 3.0.0
-	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@ ^4.3.0
+	links2004/WebSockets@ ^2.3.7
+	ayushsharma82/AsyncElegantOTA @  ^2.2.7
+	ottowinter/ESPAsyncWebServer-esphome@ ^3.0.0
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@ ^4.4.0
 	adafruit/MAX6675 library@^1.1.0
 monitor_port = /dev/ttyUSB0
 
