--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ upload_port = /dev/ttyUSB0
 board_build.partitions = min_spiffs.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.1
-	links2004/WebSockets@ ^2.3.7
+	;links2004/WebSockets@ ^2.3.7
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@ ^4.4.0
 	adafruit/MAX6675 library@^1.1.0
 	;khoih-prog/ESPAsync_WiFiManager@^1.15.1
@@ -36,7 +36,7 @@ upload_port = /dev/cu.wchusbserial14310
 board_build.partitions = min_spiffs.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.1
-	links2004/WebSockets@^2.3.7
+	;links2004/WebSockets@^2.3.7
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
 	adafruit/MAX6675 library@^1.1.0
 	;khoih-prog/ESPAsync_WiFiManager@^1.15.1
