--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@ ^4.4.0
 	adafruit/MAX6675 library@^1.1.0
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	denyssene/SimpleKalmanFilter@^0.1.0
 monitor_port = /dev/ttyUSB0
 
 [env:nodemcu-32_mac]
@@ -37,4 +38,5 @@ lib_deps =
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
 	adafruit/MAX6675 library@^1.1.0
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	denyssene/SimpleKalmanFilter@^0.1.0
 monitor_port = /dev/cu.wchusbserial14310
