--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,21 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32_mac/firmware.elf",
-            "projectEnvName": "nodemcu-32_mac",
+            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32s/firmware.elf",
+            "projectEnvName": "nodemcu-32s",
             "toolchainBinDir": "/Users/xiaoning/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (nodemcu-32_mac)"
+                "task": "Pre-Debug"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32_mac/firmware.elf",
-            "projectEnvName": "nodemcu-32_mac",
+            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32s/firmware.elf",
+            "projectEnvName": "nodemcu-32s",
             "toolchainBinDir": "/Users/xiaoning/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32_mac/firmware.elf",
-            "projectEnvName": "nodemcu-32_mac",
+            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32s/firmware.elf",
+            "projectEnvName": "nodemcu-32s",
             "toolchainBinDir": "/Users/xiaoning/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
