--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,9 @@
 // AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
 //
-// PIO Unified Debugger
+// PlatformIO Debugging Solution
 //
-// Documentation: https://docs.platformio.org/page/plus/debugging.html
-// Configuration: https://docs.platformio.org/page/projectconf/section_env_debug.html
+// Documentation: https://docs.platformio.org/en/latest/plus/debugging.html
+// Configuration: https://docs.platformio.org/en/latest/projectconf/sections/env/options/debug/index.html
 
 {
     "version": "0.2.0",
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32s/firmware.elf",
+            "executable": "/Users/work/Documents/GitHub/TC4-WB/.pio/build/nodemcu-32s/firmware.elf",
             "projectEnvName": "nodemcu-32s",
-            "toolchainBinDir": "/Users/xiaoning/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
+            "toolchainBinDir": "/Users/work/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32s/firmware.elf",
+            "executable": "/Users/work/Documents/GitHub/TC4-WB/.pio/build/nodemcu-32s/firmware.elf",
             "projectEnvName": "nodemcu-32s",
-            "toolchainBinDir": "/Users/xiaoning/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
+            "toolchainBinDir": "/Users/work/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/xiaoning/Documents/GitHub/TC4_OLED/.pio/build/nodemcu-32s/firmware.elf",
+            "executable": "/Users/work/Documents/GitHub/TC4-WB/.pio/build/nodemcu-32s/firmware.elf",
             "projectEnvName": "nodemcu-32s",
-            "toolchainBinDir": "/Users/xiaoning/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
+            "toolchainBinDir": "/Users/work/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch3/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
